<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#BA7476">

    <TextView
        android:id="@+id/textView_inventory_nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_inv"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_inventory_nameDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_inventory_ageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/age_inv"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_inventory_nameTitle" />

    <TextView
        android:id="@+id/textView_inventory_ageDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView_inventory_nameDesc"
        app:layout_constraintTop_toBottomOf="@+id/textView_inventory_nameDesc" />

    <TextView
        android:id="@+id/textView_inventory_foodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/food_inv"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_inventory_ageTitle" />

    <TextView
        android:id="@+id/textView_inventory_foodDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="TextView"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView_inventory"
        app:layout_constraintStart_toStartOf="@+id/textView_inventory_ageDesc" />

    <ImageView
        android:id="@+id/imageView_inventory"
        android:layout_width="wrap_content"
        android:layout_height="260dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/hippo_inv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_inventory_foodTitle"
        app:srcCompat="@drawable/hippo1" />
</androidx.constraintlayout.widget.ConstraintLayout>